Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-3149

LUSTRE_VERSION_CODE checks break 2.3.90

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.4.0
    • Lustre 2.4.0
    • 3
    • 7635

      When we move to the 2.3.90 release for the first RC tag for 2.4.0, the following check in lustre/obdclass/local_storage.c will fail:

      #if LUSTRE_VERSION_CODE >= OBD_OCD_VERSION(2, 3, 90, 0)
      #error "fix this before release"
      #endif
                      /*
                       * there is one technical debt left in Orion:
                       * proper hanlding of named vs no-name objects.
                       * Llog objects have name always as they are placed in O/d/...
                       */
      

      This is adjacent to a line in the LU-2886 patch http://review.whamcloud.com/4682, but is not removed by that patch. Presumably the problem is related to the llog objects, so I'm making this a separate bug. If this is being fixed by LU-2886, then possibly this bug should be closed as a duplicate. In either case, a new patch (dependent on http://review.whamcloud.com/4682) needs to be submitted to delete this check, and hopefully fix whatever needs to be fixed before the release.

            tappro Mikhail Pershin
            adilger Andreas Dilger
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: