LU-3149 llog: separate named and unnamed llog sequences

unnamed llogs are placed in O/seq/d<n> like OST objects,
that adds them to the namesapace. At the same time named llogs
don't need that. Patch introduces new sequence for named llogs
FID_SEQ_LLOG_NAME, so they can be distinguished and not placed
into O/seq/d..
This allows to remove technical debts code releated to the
named llogs handling.

Signed-off-by: Mikhail Pershin <mike.pershin@intel.com>
Change-Id: I5e6edbf02ae0c34ed616833530957ba4afc40f97
Reviewed-on: http://review.whamcloud.com/6053
Tested-by: Hudson
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Alex Zhuravlev <alexey.zhuravlev@intel.com>